# just-call

client-app/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  build-app-windows.bat  build-linux.sh  vcpkg.json
client-app/client-app/: CMakeLists.txt  client-app.cpp  network.h  utils.h
client-app/src/: forms.h  main.cpp  models.h  network.h  utils.h
client/src/: Makefile  imgui.ini  main.cpp
server/: main.c  makefile  server
server/dependencies/: errors.h  handlers.h  models.h  utils.h
voice-call-front/: README.md  angular.json  package-lock.json  package.json
voice-call-front/src/: index.html  styles.scss
voice-call-front/src/app/: app.module.ts  app.routes.ts
voice-call-front/src/app/components/channel/: channel.component.html  channel.component.scss  channel.component.ts  channel.module.ts
voice-call-front/src/app/components/person/: person.component.html  person.component.scss  person.component.ts  person.module.ts
voice-call-front/src/app/components/slidebar/: slidebar.component.html  slidebar.component.scss  slidebar.component.ts  slidebar.module.ts
voice-call-front/src/app/enum/: ChannelType.enum.ts
voice-call-front/src/app/models/: Channel.ts  Message.ts  Person.ts
voice-call-front/src/app/pages/home-page/: home-page.component.html  home-page.component.ts  home-page.module.ts  home-page.routes.ts
voice-call-front/src/app/pages/message-page/: message-page.component.html  message-page.component.ts  message-page.module.ts
